fix: username align text

--- a/src/style/ChatMessage.css
+++ b/src/style/ChatMessage.css
@@ -55,6 +55,7 @@
     margin-top: 8px;
     color: gray;
     font-size: 13px;
+    text-align: right;
 }
 
 .othersMessage .senderName {
